more style to the navbar (I should stop this blind styling but I like it too much :P)

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -61,6 +61,9 @@ body {
   -o-object-fit: contain;
      object-fit: contain;
 }
+.navbar-logo-link-active {
+  color: #fc0800;
+}
 .navbar-title {
   font-size: 1.25rem;
   font-weight: 700;
@@ -82,7 +85,7 @@ body {
 .nav-list {
   display: flex;
   flex-direction: row;
-  gap: 8px;
+  gap: 4px;
   flex-wrap: wrap;
   justify-content: center;
 }
@@ -93,15 +96,38 @@ body {
   color: #f5f5f5;
   text-decoration: none;
   font-weight: 500;
+  font-size: 14px;
   transition: color 0.2s ease;
   display: block;
+  position: relative;
+}
+.nav-item::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  height: 1px;
+  background-color: #fc0800;
+  transition: width 0.3s ease;
 }
 .nav-item:hover {
   color: var(--accent-red);
 }
+.nav-item:hover::after {
+  width: 100%;
+}
 .nav-item-active {
-  font-weight: 600;
   color: #fc0800;
+}
+.nav-item-active::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: #fc0800;
 }
 
 .main-content {
